--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "casatrade-info",
+  "name": "casatrade-website",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev --host",
